add ajax, IE9 supported

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
             width: '100px',
             height: '100px',
             background: 'green'
-        }).appendTo($('.wrapper'))
+        }).appendTo($('.wrapper')).ac('green-box')
+        console.log($('.box').bound())
+        // console.log($.ajax)
+        // $.ajax({
+        //     method: 'get',
+        //     url: 'package.json',
+        //     success: function(data) {
+        //         console.log(data)
+        //     }
+        // })
     </script>
 </body>
 </html>
