--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper"></div>
-    <div class="box"></div>
+    <div class="box" id="first"></div>
     <div class="box"></div>
     <div class="box"></div>
     <script src="./dist/js/tinyJquery.js"></script>
@@ -20,13 +20,13 @@
         }).appendTo($('.wrapper')).ac('green-box')
         console.log($('.box').bound())
         // console.log($.ajax)
-        // $.ajax({
-        //     method: 'get',
-        //     url: 'package.json',
-        //     success: function(data) {
-        //         console.log(data)
-        //     }
-        // })
+        $.ajax({
+            method: 'get',
+            url: '/package.json',
+            success: function(data) {
+                $('#first').html(data)
+            }
+        })
     </script>
 </body>
 </html>
